--- a/hw_3_start_oop/pom.xml
+++ b/hw_3_start_oop/pom.xml
@@ -9,30 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hw_2_strings</artifactId>
+    <artifactId>hw_3_start_oop</artifactId>
 
     <properties>
         <java.version>17</java.version>
-        <commons.lang3.version>3.12.0</commons.lang3.version>
-        <reversestring.version>1.0</reversestring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.shade.plugin.version>3.2.0</maven.shade.plugin.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>${commons.lang3.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ua.com.alevel</groupId>
-            <artifactId>reversestring</artifactId>
-            <version>${reversestring.version}</version>
-        </dependency>
-    </dependencies>
 
     <build>
         <finalName>hw_2_strings</finalName>
