--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <modules>
         <module>hw_1_base_operations</module>
         <module>hw_2_strings</module>
+        <module>hw_3_start_oop</module>
+        <module>reversestring</module>
     </modules>
 
     <packaging>pom</packaging>
