--- a/hw_3_start_oop/pom.xml
+++ b/hw_3_start_oop/pom.xml
@@ -13,14 +13,23 @@
 
     <properties>
         <java.version>17</java.version>
+        <commons.lang3.version>3.12.0</commons.lang3.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.shade.plugin.version>3.2.0</maven.shade.plugin.version>
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons.lang3.version}</version>
+        </dependency>
+    </dependencies>
+
     <build>
-        <finalName>hw_2_strings</finalName>
+        <finalName>hw_3_start_oop</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -45,7 +54,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ua.com.alevel.StringOperationsMain</mainClass>
+                                    <mainClass>ua.com.alevel.StartOopMain</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
