--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>hw_2_strings</module>
         <module>hw_3_start_oop</module>
         <module>reversestring</module>
+        <module>module_1</module>
     </modules>
 
     <packaging>pom</packaging>
