--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>hw_3_start_oop</module>
         <module>reversestring</module>
         <module>module_1</module>
+        <module>hw_4_logs_and_test</module>
     </modules>
 
     <packaging>pom</packaging>
