--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>reversestring</module>
         <module>module_1</module>
         <module>hw_4_logs_and_test</module>
+        <module>hw_5_collection</module>
     </modules>
 
     <packaging>pom</packaging>
