--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>hw_5_collection</module>
         <module>hw_6_calendar</module>
         <module>module_2</module>
+        <module>hw_7_data_table_jdbc</module>
     </modules>
 
     <packaging>pom</packaging>
