--- a/hw_7_data_table_jdbc/src/main/resources/application.properties
+++ b/hw_7_data_table_jdbc/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/groups_students?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=rootroot
 
 spring.sql.init.platform=mysql
 spring.sql.init.mode=always
