--- a/hw_7_data_table_jdbc/src/main/resources/application.properties
+++ b/hw_7_data_table_jdbc/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MySQL connection properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/groups_students?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/groups_students?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=rootroot
 
