--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>hw_6_calendar</module>
         <module>module_2</module>
         <module>hw_7_data_table_jdbc</module>
+        <module>hw_8_jpa</module>
+        <module>hw_9_hibernate</module>
     </modules>
 
     <packaging>pom</packaging>
