Added homework hw_8_JPA and hw_9_Hibernate

--- a/hw_9_hibernate/pom.xml
+++ b/hw_9_hibernate/pom.xml
@@ -11,10 +11,10 @@
     </parent>
 
     <groupId>ua.com.alevel</groupId>
-    <artifactId>hw_9_web_hibernate</artifactId>
+    <artifactId>hw_9_hibernate</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>hw_9_web_hibernate</name>
-    <description>hw_9_web_hibernate</description>
+    <name>hw_9_hibernate</name>
+    <description>hw_9_hibernate</description>
 
     <properties>
         <java.version>17</java.version>
