--- a/hw_9_hibernate/src/main/resources/application.properties
+++ b/hw_9_hibernate/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # MySQL connection properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test_jpa?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/groups_students?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=rootroot
 #spring.datasource.platform=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
@@ -14,6 +14,10 @@ spring.jpa.properties.hibernate.jdbc.fetch_size=50
 spring.jpa.properties.hibernate.jdbc.max_size=25
 spring.jpa.properties.hibernate.jdbc.min_size=5
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.sql.init.platform=mysql
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:sql/data.sql
+spring.sql.init.schema-locations=classpath:sql/schema.sql
 # thymeleaf
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
