--- a/module_3/src/main/resources/application.properties
+++ b/module_3/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MySQL connection properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/groups_students?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/bank?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.platform=mysql
