--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>hw_8_jpa</module>
         <module>hw_9_hibernate</module>
         <module>module_3</module>
+        <module>hw_10_clean_spring</module>
     </modules>
 
     <packaging>pom</packaging>
